--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,27 +1,32 @@
 es:
   activerecord:
     models:
-      spree/slide: "Diapositiva"
+      spree/slide: Diapositiva
 
   spree:
-    next: "Siguiente"
-    previous: "Anterior"
-    name: "Nombre"
-    body: "Cuerpo"
-    link_url: "URL de enlace"
-    image: "Imagen"
-    image_file_name: "Nombre de la imagen"
-    published: "Publicado"
-    position: "Posición"
-    y: "Sí"
-    n: "No"
+    next: Siguiente
+    previous: Anterior
+    name: Nombre
+    body: Cuerpo
+    link_url: URL de enlace
+    image: Imagen
+    image_file_name: Nombre de la imagen
+    published: Publicado
+    position: Posición
+    y: Sí
+    n: No
 
     slider:
-      config_name: "Diapositivas"
-      config_description: "Configura las diapositivas de portada"
-      title: "Diapositivas"
-      new_slide: "Nueva Diapositiva"
-      editing_slide: "Editando Diapositiva"
-      placeholder_name: "En blanco para usar el del producto"
-      placeholder_link_url: "En blanco para usar la del producto"
-      image_tip: "Si no selecciona ninguna imagen, se tomará la primera del producto"
+      config_name: Diapositivas
+      config_description: Configura las diapositivas de portada
+      title: Diapositivas
+      new_slide: Nueva Diapositiva
+      editing_slide: Editando Diapositiva
+      placeholder_name: En blanco para usar el del producto
+      placeholder_link_url: En blanco para usar la del producto
+      image_tip: Si no selecciona ninguna imagen, se tomará la primera del producto
+
+    slider_location:
+      editing_location: Editar Locación
+      back_to_locations: Regresar a Locaciones
+      new_location: Nueva Locación
